@@ -44,3 +44,7 @@ else {
   }
 }
  
+// Call hook_exit as we leave the page.
+invoke_hook("exit"); 
+ 
+ 
